# biblio

./: .codescene-thresholds  .codesceneignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  REDESIGN-PLAN.md  SECURITY.md  SF-SYMBOLS-MIGRATION.md  index.html  package.json  playwright.config.ts  playwright.smoke.config.ts  pnpm-lock.yaml  trademarks.md  ui-design.pen  vite.config.ts
.github/: SETUP.md
demo-vault-v2/: .fixture-manifest.json  24q4-laputa-start.md  final-title-renamed.md  untitled-experiment-2.md  untitled-note-1775496473.md  untitled-note-1775496825.md  untitled-note-1775497099.md  untitled-note-1775542716-renamed.md  untitled-project-1775497094.md
design/: build-number-status-bar.pen  date-picker-shadcn.pen  gs-wikilinks-fix.pen  modified-notes-indicator.pen
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  CONFIG_FAQ.md  GETTING-STARTED.md  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ai_agents.rs  app_updater.rs  claude_cli.rs  commands.rs  git.rs  lib.rs  main.rs  mcp.rs  menu.rs  settings.rs  telemetry.rs  vault_list.rs
src-tauri/src/commands/: delete.rs  vault.rs
src-tauri/src/commands/vault/: boundary.rs  file_cmds.rs  frontmatter_cmds.rs  lifecycle_cmds.rs  rename_cmds.rs  scan_cmds.rs  view_cmds.rs
src-tauri/src/git/: clone.rs  commit.rs  conflict.rs  connect.rs  dates.rs  history.rs  mod.rs  pulse.rs  remote.rs  status.rs
src-tauri/src/vault/: cache.rs  config_seed.rs  filename_rules.rs  folders.rs  frontmatter.rs  getting_started.rs  mod.rs  mod_tests.rs  parsing.rs  rename.rs  rename_transaction.rs  views.rs
(+302 files in other folders)
